test/bad/generics/void01.px

func f<T>(x: T) def
    return

f(f(0))
